encoding fix, chut-chut prichesal